add biker zone web page with plaing bs

--- a/convension-center/index.html
+++ b/convension-center/index.html
@@ -90,8 +90,12 @@
         line-height: 26px;
         letter-spacing: 0.2px;
     }
+    footer img{
+        height: 50px;
+        margin-bottom: 20px;
+        
+    }
 </style>
-
 <body>
     <nav class="container-lg navbar navbar-expand-lg ">
         <div class="container-fluid">
@@ -146,8 +150,8 @@
                 <div class="carousel-item">
                     <img src="images/banner-2.png" class="d-block w-100 " alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h1 class="text-primary">Akkas Ali</h1>
+                        <p>Wadding in 2019 14th Fab. </p>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -385,7 +389,12 @@
 
     <footer class="d-flex justify-content-around align-items-center text-light mt-5" style="height: 300px; background-color: #000;">
         <div><small>© 2020 bike. All rights reserved</small></div>
-        <div>Get the app</div>
+        <div>
+            <p class="fs-5 fw-bold">Get the app</p>
+            <img src="images/android.png" alt=""> <br>
+            <img src="images/ios.png" alt="">
+            
+        </div>
     </footer>
 
 
